--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://aplusiv.github.io/ra_1-2_events-state_layouts/"
 }
